# T-MAC

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  TRANSPARENCY.md  pyproject.toml  requirements-codegen.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml
accel-sim/: README.md
accel-sim/a100_config/: gpgpusim.config  trace.config
accel-sim/flow/cuda_source/: cutlass_gemm_tcore.cu
blackbox/: test_tbl.cc  test_tbl.sh
cmake/: TMACConfig.cmake.in
conda/: tvm-build-environment.yaml
data/ace-2/: results.csv
data/m2-ultra/: results.csv
data/vivo-x30/: results.csv
deploy/: Makefile  benchmark.cc  compile.py
deploy/tuned/: kcfg.ini  kernels.cc  kernels.h  results.csv
deploy/tuned/aarch64-hf-bitnet-3b/: kernels.cc  kernels.h
deploy/tuned/aarch64-llama-2-7b-2bit/: kcfg.ini  kernels.cc  kernels.h
deploy/tuned/aarch64-llama-2-7b-4bit/: kcfg.ini  kernels.cc  kernels.h
deploy/tuned/aarch64-llama-3-8b-2bit/: kcfg.ini  kernels.cc  kernels.h
deploy/tuned/arm-hf-bitnet-3b/: kcfg.ini
deploy/tuned/avx2/: kcfg.ini  kernels.cc  kernels.h
docker/: Dockerfile.x86_64
docker/scripts/: run_example_on_docker_x86_64.sh
docs/: android.md  codegen.md  e2e.md  profiling_data.md  usage_deprecated.md
include/t-mac/: tmac_gemm_wrapper.h
python/t_mac/: __init__.py  model_utils.py  platform.py  utils.py  weights.py
python/t_mac/intrins/: __init__.py  lut_ctor.cc  lut_ctor.py  tbl.cc  tbl.py  types.h  utils.py
python/t_mac/ops/: __init__.py  base.py  gemm.py  qgemm.py  qgemv.py
sv_lut_array/: README.md
sv_lut_array/rtl/: fp_lut_array_b_cycle_stage1.sv  fp_lut_array_b_cycle_stage2.sv
sv_lut_array/scripts/: constraint.tcl  dc.tcl  namingrules.tcl
t-man/: README.md
t-man/docs/: build.md
tests/: test_acc.py  test_act_quant.py  test_e2e.py  test_halving_adder.cc  test_lut_ctor.cc  test_tbl.cc
tools/: all_in_one.sh  bench_e2e.py  opt_gemm.py  opt_gemm_simple.py  profile.py  profile_gemm.py  profile_preprocessor.py  relay_dense.py  run_pipeline.py
