[project]
name = "t-mac"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
