[project]
name = "t-mac"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
]
dynamic = ["version", "dependencies"]
authors = [
  {name = "Microsoft Research"}
]

[build-system]
requires = [
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.dynamic]
version = {attr = "t_mac.version.__version__"}
dependencies = {file = ["requirements.txt"]}
